updated overflow-fix

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -8,7 +8,7 @@ body {
 	background: #ededed;
 	margin: 0;
 	padding: 0;
-	overflow: none;
+	overflow: hidden;
 }
 
 input {
